<resources>
    <string name="app_name">AppDemo</string>
    <string name="toolbar_name">应用管理商店</string>

    <string name="text00">人最困难的事情就是认识自己</string>
    <string name="text01">自知之明是最难得的知识</string>
    <string name="text02">越是没有本领的就越加自命不凡</string>
    <string name="text03">有时候读书是一种巧妙地避开思考的方法</string>
    <string name="text04">知人者智，自知者明。胜人者有力，自胜者强</string>
    <string name="menu_appupdate">应用更新</string>
    <string name="menu_message">消息中心</string>
    <string name="menu_setting">设置</string>
    <string name="menu_search">找寻</string>
    <string name="menu_notification">提示</string>
    <string name="menu_about_us">关于我们</string>
    <string name="open">打开</string>
    <string name="close">关闭</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
<!--    字体图标，矢量图转tff-->
    <string name="icon_message">&#xe635;</string>
    <string name="high">最高温度:</string>
    <string name="low">最低温度:</string>
    <string name="ymd">年月日:</string>
    <string name="fl">风力:</string>
    <string name="fx">风向:</string>
</resources>