<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:orientation="horizontal">
        <TextView
            android:layout_gravity="center"
            android:id="@+id/txt3"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/dimen_16dp"
            tools:text="@string/ymd" />
        <TextView
            android:layout_width="150dp"
            android:layout_height="@dimen/dimen_16dp"


            android:id="@+id/ymd"
            />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/txt1"

            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/colorOrange"
            android:textSize="@dimen/dimen_16dp"
            tools:text="@string/high" />
        <TextView
            android:layout_width="@dimen/dimen_60dp"
            android:layout_height="match_parent"

            android:textSize="@dimen/dimen_16dp"
            android:id="@+id/high"
            />
        <TextView
            android:id="@+id/txt2"

            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/colorYellow"
            android:textSize="@dimen/dimen_16dp"
            tools:text="@string/low" />
        <TextView
            android:layout_width="@dimen/dimen_60dp"
            android:layout_height="match_parent"
            android:textSize="@dimen/dimen_16dp"


            android:id="@+id/low"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="26dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/dimen_16dp"
            tools:text="@string/fx" />

        <TextView
            android:id="@+id/fx"
            android:layout_width="@dimen/dimen_60dp"
            android:layout_height="@dimen/dimen_16dp"

             />

        <TextView
            android:id="@+id/txt5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorOrange"
            android:textSize="@dimen/dimen_16dp"
            tools:text="@string/fl" />

        <TextView
            android:id="@+id/fl"
            android:layout_width="@dimen/dimen_60dp"
            android:layout_height="match_parent"


            android:textSize="@dimen/dimen_16dp" />

    </LinearLayout>





</LinearLayout>